<resources>
    <string name="app_name">Lrahtk</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="quantity">Quantity</string>
    <string name="brew_tea">ADD TO CART</string>
    <string name="initial_cost">L.E0.00</string>
    <string name="initial_quantity_value">1</string>
    <string name="total">Total</string>
    <string name="price">PRICE: </string>
    <string name="action_cart">Shopping Cart</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="fragrance_name">Fragrance Name</string>
    <string name="item_added">Item Added to WishList</string>
    <string name="item_removed">Item Removed from WishList</string>
    <string name="toolbar_favorite_snack">"Toolbar favorite clicked: "</string>
    <string name="wish_list">Wish List</string>
    <string name="wish_list_branch">Wish List</string>
    <string name="name">Name</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">GOT IT</string>
    <string name="takepic">Take picture</string>
    <string name="firstname">First Name</string>
    <string name="username">User Name</string>
    <string name="userremail">Email</string>
    <string name="userpassword">Password</string>
    <string name="userphone">Mobile Number</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="alreadyhaveaccount">Already have account ?</string>
    <string name="signup">Sign up</string>
    <string name="foegetpassword">forget password?</string>
    <string name="title_activity_contact_us">Map</string>
    <string name="email">Email Address</string>
    <string name="ourplace">Our Place</string>
    <string name="ourmail">Hello@gmail.com</string>
    <string name="usermessage">Your Message</string>
    <string name="sendmessage">Send</string>
    <string name="WelcometoLrahtk">Welome To Lrahtk</string>
    <string name="introapp">Each online store has its own store and bag,but if you want to go shopping in multiple places at once,so you only have one bag</string>
    <string name="getstart">Get Start</string>
    <string name="item_discreption">akdahkdhkaldkadhka aksnkahdskahkds kabsnkaljbsklasklhds akbsklajskljasb</string>
    <string name="currancy">L.E</string>
    <string name="home">Home</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_products">ProductsActivity</string>
    <string name="tab_text_1">Cleaner</string>
    <string name="tab_text_2">Dairy</string>
    <string name="tab_text_3">Meat</string>
    <string name="tab_text_4">Canned</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1L.Ed</string>
    <string name="offers">Offers</string>
    <string name="purchases">MyPurchases</string>
    <string name="search">Search</string>
    <string name="sections">Sections</string>
    <string name="signin">Sign in</string>
    <string name="cleanername">Item Name</string>
    <string name="Yourcounter">Determine Quantity</string>
    <string name="itemname">Item Name</string>
    <string name="itemnameprice">0</string>
    <string name="L.E">L.E</string>
    <string name="Whatyouwant">What You Want</string>
    <string name="details">Details</string>
    <string name="companyname">Company Name:</string>
    <string name="Hint">Item</string>
    <string name="productiondate">Production Date:</string>
    <string name="expirydate">Expairy Date:</string>
    <string name="thesize">Size:</string>
    <string name="origincountry">Oragin Country:</string>
    <string name="Cleaner">Cleaners</string>
    <string name="Filter_by">Filter By</string>
    <string name="All">All</string>
    <string name="price2">Price</string>
    <string name="implement">Apply The Filter</string>
    <string name="Almaray">Almaray</string>
    <string name="gohina">Gohina</string>
    <string name="laktil">Laktil</string>
    <string name="bekiro">Bekiro</string>
    <string name="Lamar">Lamar</string>
    <string name="type">Type</string>
    <string name="discounts">Discounts</string>
    <string name="item">Item</string>
    <string name="dairy">Dairy</string>
    <string name="meat">Meat</string>
    <string name="canned">Canned</string>
    <string name="totalprice">Total Price:</string>
    <string name="checkout">CHECK OUT</string>
    <string name="choocesection">Choose Your Section</string>
    <string name="validation">abcdefghigklmnopkrstuvwxyz</string>


</resources>
