<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home_nav"
        android:icon="@drawable/baseline_home_white_24dp"
        android:title="@string/home" />


    <item
        android:id="@+id/offer_nav"
        android:icon="@drawable/baseline_local_offer_white_24dp"
        android:title="@string/offers" />


    <item
        android:id="@+id/Purchases_nav"
        android:icon="@drawable/ic_shopping_cart_black_24dp"
        android:title="@string/purchases" />

    <item
        android:id="@+id/search_nav"
        android:icon="@drawable/baseline_search_white_24dp"
        android:title="@string/search" />

    <item
        android:id="@+id/section_nav"
        android:icon="@drawable/baseline_format_list_bulleted_white_24dp"
        android:title="@string/sections" />


</menu>