<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                tools:context="com.delaroystudios.fragrancecart.ContactUs" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/ourplace"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:text="0123456789"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/ourmail"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/contactus_username_edt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:hint="@string/username"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/contactus_usermail_edt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/userremail"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/contactus_sendmail_edt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/usermessage"
                    android:inputType="textEmailAddress" />

                <Button
                    android:id="@+id/contactus_send_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sendmessage" />

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</ScrollView>