<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        tools:context="com.delaroystudios.fragrancecart.RegisterActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="left">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:src="@drawable/logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <TextView
                    android:id="@+id/skip_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/skip"
                    android:textColor="@color/graycolor"
                    android:textSize="22sp" />


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textColor="@color/cardview_dark_background"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="35dp"
                    android:layout_height="3dp"
                    android:layout_marginRight="5dp"
                    android:background="@color/whitegraycolor" />

                <View
                    android:layout_width="35dp"
                    android:layout_height="3dp"
                    android:background="@color/greencolor" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="7dp"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:src="@drawable/username_if" />
                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/userName_layout_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/userName_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:hint="@string/username"
                        android:inputType="text"
                        android:digits="@string/validation"
                        android:textColorHint="@color/graycolor"
                        android:textColor="@color/whitebluecolo" />


                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="7dp"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:src="@drawable/email_if" />
                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/userEmail_layout_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/userEmail_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:hint="@string/userremail"
                        android:inputType="textEmailAddress"
                        android:textColorHint="@color/graycolor"
                        android:textColor="@color/whitebluecolo" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="7dp"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"

                        android:src="@drawable/mobile_if" />
                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/userPhone_layout_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/userPhone_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:hint="@string/userphone"
                        android:text="20"
                        android:textColorHint="@color/graycolor"
                        android:inputType="phone"
                        android:textColor="@color/whitebluecolo" />


                </android.support.design.widget.TextInputLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="7dp"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:src="@drawable/password_if" />
                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/userPass_layout_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/userPass_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/userpassword"
                        android:inputType="textPassword"
                        android:textColorHint="@color/graycolor"
                        android:textColor="@color/whitebluecolo" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/register_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_edittext"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/haveaccount_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/alreadyhaveaccount"
                android:textColor="@color/graycolor"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/login_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/login"
                android:textColor="@color/graycolor"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>